finished the sketleton of the HTML file

--- a/index.html
+++ b/index.html
@@ -24,28 +24,185 @@
 
     </nav>
    </header> 
-   <section class="intro">
-    <h1>Abdel-Khafif SALAOU</h1>
-    <div>
+   <section id="intro">
+    <h1>Abdel-Khafid SALAOU</h1>
+    <div class="intro">
         <p>
             Hello! I am a software developer! I can help you build a product, feature or website. Take a look at my work.
-            <br>
-            If you like what you see and have a project you need coded, don’t hesitate to contact me. &rarr;
+        </p>
+        <p>
+            If you like what you see and have a project you need coded, don’t hesitate to contact me.
         </p>
         <button class="collab-btn">Start Collaboration</button>
+        <a href=""><img src="" alt="graphic elements for design"></a>
     </div>
-
    </section>
    <section id="projects">
+    <h2>Projects</h2>
+    <div class="project-card 1">
+        <a href="assets\projects\project_1.svg"><img src="./assets/projects/project_1.svg" alt="My first project"></a>
+        <div class="project-card-info">
+            <h2>
+                Project name
+            </h2>
+            <div>
+                <ul class="tag-list">
+                    <li class="tags">HTML/CSS</li>
+                    <li class="tags">Ruby on rails</li>
+                    <li class="tags">Javascript</li>
+                </ul>
+                <button class="see-proj-btn">See this project &rArr;</button>
+            </div>
+    </div>
+    <div class="project-card 2">
+        <a href="#"><img src="./assets/projects/project_2.svg" alt="My second project"></a>
+        <div class="project-card-info">
+            <h2>
+                Project name
+            </h2>
+            <div>
+                <ul class="tag-list">
+                    <li class="tags">HTML/CSS</li>
+                    <li class="tags">Ruby on rails</li>
+                    <li class="tags">Javascript</li>
+                </ul>
+                <button class="see-proj-btn">See this project &rArr;</button>
+            </div>
 
+        </div>
+    </div>
+    <div class="project-card 3">
+        <a href="#"><img src="./assets/projects/project_3.svg" alt="My third project"></a>
+        <div class="project-card-info">
+            <h2>
+                Project name
+            </h2>
+            <div>
+                <ul class="tag-list">
+                    <li class="tags">HTML/CSS</li>
+                    <li class="tags">Ruby on rails</li>
+                    <li class="tags">Javascript</li>
+                </ul>
+                <button class="see-proj-btn">See this project &rArr;</button>
+            </div>
+        </div>
+    </div>
+    <div class="project-card 4">
+        <a href="#"><img src="./assets/projects/project_4.svg" alt="My fourth project"></a>
+        <div class="project-card-info">
+            <h2>
+                Project name
+            </h2>
+            <div>
+                <ul class="tag-list">
+                    <li class="tags">HTML/CSS</li>
+                    <li class="tags">Ruby on rails</li>
+                    <li class="tags">Javascript</li>
+                </ul>
+                <button class="see-proj-btn">See this project &rArr;</button>
+            </div>
+
+    </div>
+    <div class="project-card 5">
+        <a href="#"><img src="./assets/projects/project_5.svg" alt="My fifth project"></a>
+        <div class="project-card-info">
+            <h2>
+                Project name
+            </h2>
+            <div>
+                <ul class="tag-list">
+                    <li class="tags">HTML/CSS</li>
+                    <li class="tags">Ruby on rails</li>
+                    <li class="tags">Javascript</li>
+                </ul>
+                <button class="see-proj-btn">See this project &rArr;</button>
+            </div>
+    </div>
+    <div class="project-card 6">
+        <a href="#"><img src="./assets/projects/project_6.svg" alt="My sixth project"></a>
+        <div class="project-card-info">
+            <h2>
+                Project name
+            </h2>
+            <div>
+                <ul class="tag-list">
+                    <li class="tags">HTML/CSS</li>
+                    <li class="tags">Ruby on rails</li>
+                    <li class="tags">Javascript</li>
+                </ul>
+                <button class="see-proj-btn">See this project &rArr;</button>
+            </div>
+    </div>
    </section>
    <section id="about">
+    <h2>About</h2>
+    <div class="intro">
+        <p>
 
+        </p>
+        <button>Get my CV</button>
+    </div>
+    <div class="languages">
+        <li>JavaScript (ES5/ES6)</li>
+        <li>Ruby</li>
+        <li>HTML</li>
+        <li>CSS</li>
+    </div>
+    <div class="frameworks">
+        <li>Bootstrap</li>
+        <li>Ruby on rails</li>
+        <li>RSpec</li>
+        <li>Capibara</li>
+        <li>Selenium</li>
+    </div>
+    <div class="skills">
+        <li>Codekit</li>
+        <li>Codepen</li>
+        <li>GitHub</li>
+        <li>GitLab</li>
+        <li>Terminal</li>
+    </div>
    </section>
    <section id="contact">
-
+    <h2>Get started</h2>
+    <form action=""></form>
    </section>
    <footer class="foot">
+    <div>
+        <a href="#" class="resume">Get my resume</a>
+        <ul class="list-items">
+              <li>
+                <a href="">
+                  <img src="./assets/icons/ic_stackoverflow.svg" alt="my social handle images" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/icons/ic_github.svg" alt="my social handle images" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/icons/ic_twitter.svg" alt="my social handle images" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./assets/icons/ic_linkedin.svg" alt="my social handle images" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                    <img src="./assets/icons/ic_medium.svg" alt="my social handle images" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                    <img src="./assets/icons/ic_angellist.svg" alt="my social handle images" />
+                </a>
+              </li>
+            </ul>
+    </div>
 
    </footer>
 
