finished the intro section

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My_portfolio2</title>
+    <title>Abdel-Khafid's Portfolio</title>
+    <style>
+        @import url('https://fonts.cdnfonts.com/css/poppins');
+</style>
+<link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
+<link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
    <header>
-    <nav class="nav-bar">
+    <nav class="navbar">
         <div class="hamburger">
             <img src="./assets/ic_menu.svg" alt="hamburger">
         </div>
         <div class="menu">
-            <ul>
+            <ul class="sections">
                 <li><a href="#intro">Portfolio</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
@@ -34,9 +40,10 @@
             If you like what you see and have a project you need coded, don’t hesitate to contact me.
         </p>
         <button class="collab-btn">Start Collaboration</button>
-        <a href=""><img src="" alt="graphic elements for design"></a>
+        <a href=""><img src="./assets/mobile/intro_bgrd_bottom.svg" alt="graphic elements for design"></a>
     </div>
    </section>
+
    <section id="projects">
     <h2>Projects</h2>
     <div class="project-card 1">
@@ -165,7 +172,16 @@
    </section>
    <section id="contact">
     <h2>Get started</h2>
-    <form action=""></form>
+    <form action="">
+        <label for=""></label>
+        <input type="text">
+        <label for=""></label>
+        <input type="text">
+        <label for=""></label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <label for=""></label>
+        <input type="button">
+    </form>
    </section>
    <footer class="foot">
     <div>
