--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="menu">
             <ul class="sections">
-                <li><a href="#intro">Portfolio</a></li>
+                <li><a href="#intro">Hello</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -41,17 +41,17 @@
         </p>
         <button class="collab-btn">Start Collaboration</button>
         <a href=""><img class="img-intro-bottom" src="./assets/mobile/intro_bgrd_bottom.svg" alt="graphic elements for design"></a>
-        <a href=""><img class="img-intro-right" src="./assets/Thur.svg" alt="graphic elements for design"></a>
     </div>
+    <a href=""><img class="img-intro-right" src="./assets/Thur.svg" alt="graphic elements for design"></a>
    </section>
 
    <section id="projects">
     <h2>Projects</h2>
-    <div class="project-card 1">
+    <div class="project-card">
         <a class="cards-img" href="assets\projects\project_1.svg"><img src="./assets/projects/project_1.svg" alt="My first project"></a>
         <div class="project-card-info">
             <h3>
-                Project name
+                Complex hydraulic systems models
             </h3>
                 <ul class="tag-list">
                     <li class="tags">HTML/CSS</li>
@@ -61,11 +61,11 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card 2">
+    <div class="project-card">
         <a class="cards-img" href="#"><img src="./assets/projects/project_2.svg" alt="My second project"></a>
         <div class="project-card-info">
             <h3>
-                Project name
+                Hydraulic head loss calculator online
             </h3>
                 <ul class="tag-list">
                     <li class="tags">HTML/CSS</li>
@@ -75,11 +75,11 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card 3">
+    <div class="project-card">
         <a class="cards-img" href="#"><img src="./assets/projects/project_3.svg" alt="My third project"></a>
         <div class="project-card-info">
             <h3>
-                Project name
+                Online scientific calculator
             </h3>
                 <ul class="tag-list">
                     <li class="tags">HTML/CSS</li>
@@ -89,11 +89,11 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card 4">
+    <div class="project-card">
         <a class="cards-img" href="#"><img src="./assets/projects/project_4.svg" alt="My fourth project"></a>
         <div class="project-card-info">
             <h3>
-                Project name
+                Professional Portfolio
             </h3>
                 <ul class="tag-list">
                     <li class="tags">HTML/CSS</li>
@@ -103,11 +103,11 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card 5">
+    <div class="project-card">
         <a class="cards-img" href="#"><img src="./assets/projects/project_5.svg" alt="My fifth project"></a>
         <div class="project-card-info">
             <h3>
-                Project name
+                Currency converter
             </h3>
                 <ul class="tag-list">
                     <li class="tags">HTML/CSS</li>
@@ -117,11 +117,11 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card 6">
+    <div class="project-card">
         <a class="cards-img" href="#"><img src="./assets/projects/project_6.svg" alt="My sixth project"></a>
         <div class="project-card-info">
             <h3>
-                Project name
+                Visit counter
             </h3>
                 <ul class="tag-list">
                     <li class="tags">HTML/CSS</li>
@@ -133,8 +133,8 @@
     </div>
    </section>
    <section id="about">
-    <h2>About</h2>
     <div class="intro-about">
+        <h2>About</h2>
         <div>
             <p>
                 I'm Abdel-khafid SALAOU, a software engineer with a solid backrground of 6 years in water engineering. Before jumping in
@@ -182,6 +182,7 @@
                 <li>Terminal</li>
             </ul>
         </div>
+        <a href="#"><img src="./assets/last_cell_assets.svg" alt="graphic design"></a>
     </div>
    </section>
    <section id="contact">
