Finished the project

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
    </section>
 
    <section id="projects">
-    <h2>Projects</h2>
-    <div class="project-card">
-        <a class="cards-img" href="assets\projects\project_1.svg"><img src="./assets/projects/project_1.svg" alt="My first project"></a>
+    <h2 class="proh2">Projects</h2>
+    <div class="project-card one">
+        <a href="assets\projects\project_1.svg"><img class="cards-img" src="./assets/projects/project_1.svg" alt="My first project"></a>
         <div class="project-card-info">
             <h3>
                 Complex hydraulic systems models
@@ -61,9 +61,9 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card">
-        <a class="cards-img" href="#"><img src="./assets/projects/project_2.svg" alt="My second project"></a>
-        <div class="project-card-info">
+    <div class="project-card two">
+        <a href="#"><img class="cards-img" src="./assets/projects/project_2.svg" alt="My second project"></a>
+        <div class="project-card-info deskno">
             <h3>
                 Hydraulic head loss calculator online
             </h3>
@@ -75,9 +75,9 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card">
-        <a class="cards-img" href="#"><img src="./assets/projects/project_3.svg" alt="My third project"></a>
-        <div class="project-card-info">
+    <div class="project-card three">
+        <a href="#"><img class="cards-img" src="./assets/projects/project_3.svg" alt="My third project"></a>
+        <div class="project-card-info deskno">
             <h3>
                 Online scientific calculator
             </h3>
@@ -89,9 +89,9 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card">
-        <a class="cards-img" href="#"><img src="./assets/projects/project_4.svg" alt="My fourth project"></a>
-        <div class="project-card-info">
+    <div class="project-card four">
+        <a href="#"><img class="cards-img" src="./assets/projects/project_4.svg" alt="My fourth project"></a>
+        <div class="project-card-info deskno">
             <h3>
                 Professional Portfolio
             </h3>
@@ -103,8 +103,8 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card">
-        <a class="cards-img" href="#"><img src="./assets/projects/project_5.svg" alt="My fifth project"></a>
+    <div class="project-card deskreduce">
+        <a href="#"><img class="cards-img" src="./assets/projects/project_5.svg" alt="My fifth project"></a>
         <div class="project-card-info">
             <h3>
                 Currency converter
@@ -117,8 +117,8 @@
                 <button class="see-proj-btn">See this project &rArr;</button>
         </div>
     </div>
-    <div class="project-card">
-        <a class="cards-img" href="#"><img src="./assets/projects/project_6.svg" alt="My sixth project"></a>
+    <div class="project-card deskno">
+        <a href="#"><img class="cards-img" src="./assets/projects/project_6.svg" alt="My sixth project"></a>
         <div class="project-card-info">
             <h3>
                 Visit counter
