added the dynamic menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <header>
     <nav class="navbar">
         <div class="hamburger">
-            <img src="./assets/ic_menu.svg" alt="hamburger">
+            <img class="hamb" src="./assets/ic_menu.svg" alt="hamburger">
         </div>
         <div class="menu">
             <ul class="sections">
@@ -246,6 +246,6 @@
     </div>
 
    </footer>
-
+<script type="module" src="script.js"></script>
 </body>
 </html>
