--- a/index.html
+++ b/index.html
@@ -200,12 +200,13 @@
                 <input class="input" type="text" maxlength="30" placeholder="Abdel-Khafid SALAOU" id="name" name="user_name"  required/>
               </label>
               <label for="mail">
-                <input class="input" type="email"  placeholder="khadaf3@gmail.com" id="mail" name="usermail" required/>
+                <input class="input" type="email"  placeholder="xxxxxx3@gmail.com" id="mail" name="usermail" required/>
+                <span id="error-message">Email must be in lower case</span>
               </label>
               <label for="message">
                 <textarea id="message" name="user_message" maxlength="500" required placeholder="Write your message"></textarea>
               </label>
-                <input type="submit" id="button" name="submit" value="Start Collaboration" />
+                <input class="sub-form" type="submit" id="button" name="submit" value="Start Collaboration" />
     </form>
    </section>
    <footer class="foot">
