added the popup window

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
    </section>
 
    <section id="projects">
-
    </section>
+   <section class="pop-window"></section>
    <section id="about">
     <div class="intro-about">
         <h2>About</h2>
